@@ -545,57 +545,57 @@ stats (
 `FILE_REFERENCE_LEB` VARCHAR(500) NULL,
 `FILE_REFERENCE_SEQ` VARCHAR(500) NULL,
 
-`NUMBER_READS` INT(11) NULL,
-`NUMBER_TRS_IN_READS` INT(11) NULL,
+`NUMBER_READS` BIGINT NULL,
+`NUMBER_TRS_IN_READS` BIGINT NULL,
 
-`NUMBER_TRS_IN_READS_GE7` INT(11) NULL,
-`NUMBER_READS_WITHTRS` INT(11) NULL,
-`NUMBER_READS_WITHTRS_GE7` INT(11) NULL,
-`NUMBER_READS_WITHTRS_GE7_AFTER_REDUND` INT(11) NULL,
+`NUMBER_TRS_IN_READS_GE7` BIGINT NULL,
+`NUMBER_READS_WITHTRS` BIGINT NULL,
+`NUMBER_READS_WITHTRS_GE7` BIGINT NULL,
+`NUMBER_READS_WITHTRS_GE7_AFTER_REDUND` BIGINT NULL,
 
-`NUMBER_TRS_IN_READS_AFTER_REDUND` INT(11) NULL,
-`NUMBER_REF_TRS` INT(11) NULL,
-`NUMBER_REFS_TRS_AFTER_REDUND` INT(11) NULL,
+`NUMBER_TRS_IN_READS_AFTER_REDUND` BIGINT NULL,
+`NUMBER_REF_TRS` BIGINT NULL,
+`NUMBER_REFS_TRS_AFTER_REDUND` BIGINT NULL,
 
-`CLUST_NUMBER_OF_PROCLU_CLUSTERS` INT(11) NULL,
-`CLUST_NUMBER_OF_PROCLU_CLUSTERS_BEFORE_REJOIN` INT(11) NULL,
-`CLUST_NUMBER_OF_EXACTPAT_CLUSTERS` INT(11) NULL,
-`CLUST_NUMBER_OF_REF_REPS_IN_CLUSTERS` INT(11) NULL,
-`CLUST_NUMBER_OF_READ_REPS_IN_CLUSTERS` INT(11) NULL,
+`CLUST_NUMBER_OF_PROCLU_CLUSTERS` BIGINT NULL,
+`CLUST_NUMBER_OF_PROCLU_CLUSTERS_BEFORE_REJOIN` BIGINT NULL,
+`CLUST_NUMBER_OF_EXACTPAT_CLUSTERS` BIGINT NULL,
+`CLUST_NUMBER_OF_REF_REPS_IN_CLUSTERS` BIGINT NULL,
+`CLUST_NUMBER_OF_READ_REPS_IN_CLUSTERS` BIGINT NULL,
 
 
-`CLUST_LARGEST_NUMBER_OF_TRS_IN_PROCLU_CLUSTER` INT(11) NULL,
-`CLUST_LARGEST_NUMBER_OF_REFS_IN_PROCLU_CLUSTER` INT(11) NULL,
-`CLUST_LARGEST_PATRANGE_IN_PROCLU_CLUSTER` INT(11) NULL,
-`CLUST_LARGEST_NUMBER_OF_TRS_IN_EXACTPAT_CLUSTER` INT(11) NULL,
-`CLUST_LARGEST_NUMBER_OF_REFS_IN_EXACTPAT_CLUSTER` INT(11) NULL,
+`CLUST_LARGEST_NUMBER_OF_TRS_IN_PROCLU_CLUSTER` BIGINT NULL,
+`CLUST_LARGEST_NUMBER_OF_REFS_IN_PROCLU_CLUSTER` BIGINT NULL,
+`CLUST_LARGEST_PATRANGE_IN_PROCLU_CLUSTER` BIGINT NULL,
+`CLUST_LARGEST_NUMBER_OF_TRS_IN_EXACTPAT_CLUSTER` BIGINT NULL,
+`CLUST_LARGEST_NUMBER_OF_REFS_IN_EXACTPAT_CLUSTER` BIGINT NULL,
 
-`CLUST_NUMBER_OF_REFS_WITH_PREDICTED_VNTR` INT(11) NULL,
-`CLUST_NUMBER_OF_CLUSTERS_WITH_PREDICTED_VNTR` INT(11) NULL,
-`NUMBER_REFS_VNTR_SPAN_N` INT(11) NULL,
+`CLUST_NUMBER_OF_REFS_WITH_PREDICTED_VNTR` BIGINT NULL,
+`CLUST_NUMBER_OF_CLUSTERS_WITH_PREDICTED_VNTR` BIGINT NULL,
+`NUMBER_REFS_VNTR_SPAN_N` BIGINT NULL,
 
-`NUMBER_REFS_SINGLE_REF_CLUSTER` INT(11) NULL,
-`NUMBER_REFS_SINGLE_REF_CLUSTER_WITH_READS_MAPPED` INT(11) NULL,
-`NUMBER_REFS_SINGLE_REF_CLUSTER_WITH_NO_READS_MAPPED` INT(11) NULL,
+`NUMBER_REFS_SINGLE_REF_CLUSTER` BIGINT NULL,
+`NUMBER_REFS_SINGLE_REF_CLUSTER_WITH_READS_MAPPED` BIGINT NULL,
+`NUMBER_REFS_SINGLE_REF_CLUSTER_WITH_NO_READS_MAPPED` BIGINT NULL,
 
-`NUMBER_MAPPED` INT(11) NULL,
-`NUMBER_RANK` INT(11) NULL,
-`NUMBER_RANKFLANK` INT(11) NULL,
-`INTERSECT_RANK_AND_RANKFLANK` INT(11) NULL,
-`INTERSECT_RANK_AND_RANKFLANK_BEFORE_PCR` INT(11) NULL,
+`NUMBER_MAPPED` BIGINT NULL,
+`NUMBER_RANK` BIGINT NULL,
+`NUMBER_RANKFLANK` BIGINT NULL,
+`INTERSECT_RANK_AND_RANKFLANK` BIGINT NULL,
+`INTERSECT_RANK_AND_RANKFLANK_BEFORE_PCR` BIGINT NULL,
 
-`BBB_WITH_MAP_DUPS` INT(11) NULL,
-`BBB` INT(11) NULL,
+`BBB_WITH_MAP_DUPS` BIGINT NULL,
+`BBB` BIGINT NULL,
 
-`RANK_EDGES_OVERCUTOFF` INT(11) NULL,
-`RANK_REMOVED_SAMEREF` INT(11) NULL,
-`RANK_REMOVED_SAMESEQ` INT(11) NULL,
-`RANK_REMOVED_PCRDUP` INT(11) NULL,
+`RANK_EDGES_OVERCUTOFF` BIGINT NULL,
+`RANK_REMOVED_SAMEREF` BIGINT NULL,
+`RANK_REMOVED_SAMESEQ` BIGINT NULL,
+`RANK_REMOVED_PCRDUP` BIGINT NULL,
 
-`RANKFLANK_EDGES_INSERTED` INT(11) NULL,
-`RANKFLANK_REMOVED_SAMEREF` INT(11) NULL,
-`RANKFLANK_REMOVED_SAMESEQ` INT(11) NULL,
-`RANKFLANK_REMOVED_PCRDUP` INT(11) NULL,
+`RANKFLANK_EDGES_INSERTED` BIGINT NULL,
+`RANKFLANK_REMOVED_SAMEREF` BIGINT NULL,
+`RANKFLANK_REMOVED_SAMESEQ` BIGINT NULL,
+`RANKFLANK_REMOVED_PCRDUP` BIGINT NULL,
 
 
 `TIME_MYSQLCREATE` INT(11) NULL,
